force-app/main/default/objects/Engagement_Dismissal__c/Engagement_Dismissal__c.object-meta.xml
<CustomObject>
    <label>Engagement Dismissal</label>
    <nameField>
        <displayFormat>DISM-{00000}</displayFormat>
        <label>Engagement Dismissal Number</label>
        <type>AutoNumber</type>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Engagement Dismissals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>