force-app/main/default/objects/Engagement_Dismissal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Dismissals</relationshipLabel>
    <relationshipName>Engagement_Dismissals</relationshipName>
    <type>Lookup</type>
</CustomField>