force-app/main/default/objects/Engagement_Dismissal__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Dismissals</relationshipLabel>
    <relationshipName>Engagement_Dismissals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>