force-app/main/default/objects/Engagement_Dismissal__c/fields/Dismissed_At__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Dismissed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>