force-app/main/default/objects/Engagement_Dismissal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Engagement Dismissals</relationshipLabel>
    <relationshipName>Engagement_Dismissals</relationshipName>
    <type>Lookup</type>
</CustomField>