force-app/main/default/objects/Engagement_Dismissal__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>